--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.fundall.gettallysdk'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.fundall.gettallysdk"
@@ -41,4 +41,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //implementation 'com.github.netplusTeam:GetTallySDK:Tag'
 }
