--- a/qrengine/build.gradle
+++ b/qrengine/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation("com.google.code.gson:gson:2.10")
     implementation("io.insert-koin:koin-android:3.2.0")
     implementation("com.google.crypto.tink:tink-android:1.8.0")
+    implementation("androidx.browser:browser:1.3.0")
 }
 
 afterEvaluate {
