Disabled Koin dependency injection because there was issue integrating with a Flutter project. I replaced Koin and handled the DI manually, check ManualDIHandler.kt

--- a/qrengine/src/main/AndroidManifest.xml
+++ b/qrengine/src/main/AndroidManifest.xml
@@ -3,5 +3,5 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application android:name=".koin.KoinApp" />
+    <!--<application android:name=".koin.KoinApp" />-->
 </manifest>
