--- a/qrengine/build.gradle
+++ b/qrengine/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation("com.squareup.retrofit2:converter-gson:2.9.0")
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.1")
     implementation("com.google.code.gson:gson:2.10")
-    implementation("io.insert-koin:koin-android:3.2.0")
+    //implementation("io.insert-koin:koin-android:3.2.0")
     implementation("com.google.crypto.tink:tink-android:1.8.0")
     implementation("androidx.browser:browser:1.3.0")
 }
